deployment2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep2
  labels:
    task: two
    tier: homework
  annotations:
    container: nginx
  namespace: netology
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx-ssl
  template:
    metadata:
      labels:
        app: nginx-ssl
    spec:
      containers:
        - name: nginx
          image: nginx:1.24.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - name: nginx-web
              containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 4
          volumeMounts:
            - name: nginx-page
              mountPath: "/usr/share/nginx/html"
      volumes:
        - name:  nginx-page
          configMap:
            name: config-nginx-ssl
...
