service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ng-mt
  namespace: netology
spec:
  selector:
    app: nginx-multitool
  type: ClusterIP
  ports:
  - name: nginx-http
    port: 80
    targetPort: nginx-web
  - name: multitool-http
    port: 8080
    targetPort: http
  - name: multitool-https
    port: 8443
    targetPort: https
...
